--- a/docs/english.mdx
+++ b/docs/english.mdx
@@ -92,3 +92,5 @@ In summary, the relationships are as follows:
 - Each `Author` can have multiple `Books`.
 - Each `Booking` is associated with a book via the `bookName` field, linking to the `Book` model's `name` field.
 
+Short Description:
+- 
